@@ -4,7 +4,7 @@ name = 'getoptpp'
 inc = env.Dir('.')
 src = env.Glob('*.cpp')
 deps = ['getoptpp','gmock','gtest_main', 'mili']
-CXXFLAGS=['-Wall', '-Wextra', '-Wno-sign-compare']
+CXXFLAGS=['-Wall', '-Wextra', '-Wno-sign-compare', '-ggdb3']
 
 env.Replace(CXXFLAGS=CXXFLAGS, CFLAGS=CXXFLAGS)
 env.CreateTest(name, inc, src, deps)
